# RustyLite

./: .gitignore  Cargo.toml  README.md  sql_processor.excalidraw
cli/: Cargo.toml
cli/src/: main.rs
sqlite/: Cargo.toml
sqlite/src/: btree.rs  column.rs  connection.rs  lib.rs  page.rs  record.rs  row.rs  schema.rs  sqlite.rs  sqlite_cell.rs  table.rs  tests.rs  varint.rs
src/: main.rs  sqlite.rs
src/sqlite/: btree.rs  column.rs  connection.rs  database.rs  index_btree.rs  page.rs  record.rs  row.rs  row_reader.rs  schema.rs  sql.rs  sqlite.rs  sqlite_schema.rs  tests.rs
src/sqlite/page/: index_interior.rs  index_leaf.rs  page_header.rs  table_interior.rs  table_leaf.rs
src/sqlite/schema/: index_schema.rs  table_schema.rs
src/sqlite/sql/: sql_engine.rs
