[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
colored = "2"

[dependencies]
itertools = "0.11.0"
anyhow = "1.0.59"    # error handling
nom = "7.0.0"        # for parsing
peg = "0.7.0"        # for parsing
regex = "1.5.4"      # for parsing
thiserror = "1.0.32" # error handling
